# myarm64-soc-emulator-Public

./: .asm-lsp.toml  .gitignore  Cargo.toml  Justfile  bacon.toml  build.zig  readme.md
bins/: add.s  arithmetic.s
nix/: dev-tools.nix
src/: error.rs  lib.rs  main.rs
src/cpu/: decoder.rs  exceptions.rs  executor.rs  mod.rs  registers.rs
src/memory/: bus.rs  mmu.rs  mod.rs  ram.rs
src/peripherals/: gic.rs  mod.rs  timer.rs  traits.rs  uart.rs
src/printer/: table.rs
src/system/: mod.rs  soc.rs
tests/: integration.rs  link.ld  test.s
